--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,6 @@ generated
 # XCode
 *.xcodeproj
 
-# C extensions
-#*.so
-#*.dSYM
-
 # Packages
 *.egg
 *.egg-info
@@ -34,6 +30,7 @@ var
 sdist
 develop-eggs
 .installed.cfg
+
 # lib
 lib64
 __pycache__
@@ -59,10 +56,11 @@ nosetests.xml
 ###################
 *.com
 *.class
-*.dll
-*.exe
+# *.dll
+# *.exe
 *.o
-*.so
+# *.so
+# *.dSYM
 
 # Packages #
 ############
